add endpoit to sync dises and small refactor