@@ -3,8 +3,13 @@ package com.example.restaurant.services;
 import com.example.restaurant.dto.request.SyncRoleResponse;
 import com.example.restaurant.dto.response.SyncBootstrapResponse;
 import com.example.restaurant.dto.response.SyncDictionariesResponse;
+import com.example.restaurant.dto.response.SyncDishResponse;
+import com.example.restaurant.helpers.PagedResult;
+import com.example.restaurant.models.Dishes;
+import com.example.restaurant.models.Ingredients;
 import com.example.restaurant.models.base.BaseEntity;
 import com.example.restaurant.models.base.BaseTranslatedEntity;
+import com.example.restaurant.models.lookup.DishesCategories;
 import com.example.restaurant.models.lookup.Roles;
 import com.example.restaurant.repository.interfaces.*;
 import org.junit.jupiter.api.DisplayName;
@@ -13,11 +18,17 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -118,9 +129,9 @@ public class SyncServicesTest {
 
         assertNotNull(response);
         assertEquals(1, response.getAllergens().size());
-        assertEquals("TOKEN_1", response.getAllergens().get(0).getToken());
-        assertEquals("Apple", response.getAllergens().get(0).getNameEn());
-        assertEquals("Jabłko", response.getAllergens().get(0).getNamePl());
+        assertEquals("TOKEN_1", response.getAllergens().getFirst().getToken());
+        assertEquals("Apple", response.getAllergens().getFirst().getNameEn());
+        assertEquals("Jabłko", response.getAllergens().getFirst().getNamePl());
         assertTrue(response.getIngredients().isEmpty());
     }
 
@@ -132,9 +143,8 @@ public class SyncServicesTest {
 
         when(_allergenRepo.findAll()).thenReturn((List) List.of(unsupportedEntity));
 
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
-            _syncServices.getDictionaries();
-        });
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
+                () -> _syncServices.getDictionaries());
 
         assertTrue(exception.getMessage().contains("Entity type not supported for dictionary mapping"));
     }
@@ -171,5 +181,69 @@ public class SyncServicesTest {
 
         assertNotNull(result);
         assertTrue(result.isEmpty());
+    }
+
+    @Test
+    @DisplayName("Get Dishes Sync: Should correctly map dishes, format S3 URL and extract foreign keys")
+    void getDishesSync_ShouldReturnMappedDishes() {
+        ReflectionTestUtils.setField(_syncServices, "s3Endpoint", "https://s3.example.com");
+        ReflectionTestUtils.setField(_syncServices, "s3BucketName", "my-restaurant");
+
+        DishesCategories category = new DishesCategories();
+        category.setToken("CAT_123");
+
+        Ingredients ingredient = new Ingredients();
+        ingredient.setToken("ING_456");
+
+        Dishes dish = new Dishes();
+        dish.setToken("DISH_789");
+        dish.setName("Margherita");
+        dish.setPrice(3500);
+        dish.setAvailable(true);
+        dish.setImageUrl("pizzas/margherita.jpg");
+        dish.setCategory(category);
+        dish.setIngredients(java.util.Set.of(ingredient));
+
+        Page<Dishes> mockPage = new PageImpl<>(List.of(dish), PageRequest.of(0, 20), 1);
+        when(_dishRepo.findAll(any(Pageable.class))).thenReturn(mockPage);
+
+        PagedResult<com.example.restaurant.dto.response.SyncDishResponse> result = _syncServices.getDishesSync(1);
+
+        assertNotNull(result);
+        assertEquals(1, result.getItems().size());
+
+        com.example.restaurant.dto.response.SyncDishResponse response = result.getItems().getFirst();
+        assertEquals("DISH_789", response.getToken());
+        assertEquals("Margherita", response.getName());
+        assertEquals(3500, response.getPrice());
+        assertTrue(response.isAvailable());
+
+        assertEquals("CAT_123", response.getCategoryToken());
+        assertEquals(1, response.getIngredientTokens().size());
+        assertEquals("ING_456", response.getIngredientTokens().getFirst());
+
+        assertEquals("https://s3.example.com/my-restaurant/pizzas/margherita.jpg", response.getImageUrl());
+    }
+
+    @Test
+    @DisplayName("Get Dishes Sync: Should handle missing relations and absolute URLs safely")
+    void getDishesSync_ShouldHandleNullsAndAbsoluteUrls() {
+        Dishes dish = new Dishes();
+        dish.setToken("DISH_NULL");
+        dish.setImageUrl("http://external-domain.com/image.png");
+
+        Page<Dishes> mockPage = new PageImpl<>(List.of(dish), PageRequest.of(0, 20), 1);
+        when(_dishRepo.findAll(any(Pageable.class))).thenReturn(mockPage);
+
+        PagedResult<SyncDishResponse> result = _syncServices.getDishesSync(0);
+
+        assertNotNull(result);
+        SyncDishResponse response = result.getItems().getFirst();
+
+        assertNull(response.getCategoryToken());
+        assertNotNull(response.getIngredientTokens());
+        assertTrue(response.getIngredientTokens().isEmpty());
+
+        assertEquals("http://external-domain.com/image.png", response.getImageUrl());
     }
 }
